--- a/index.html
+++ b/index.html
@@ -58,9 +58,48 @@
     bottom: 0;
     width: 100%;
   }
+
+  nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    nav a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .iframe-container {
+      position: relative;
+      overflow: hidden;
+      padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    }
+    .iframe-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
 </style>
 </head>
+
 <body>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#ml-app">ML App</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
 <header>
   <h1>Welcome to My Data Science Portfolio</h1>
   <p>Insights with Elegance & Precision</p>
@@ -69,7 +108,7 @@
 <div class="container">
   <section class="about">
     <h2>About Me</h2>
-    <p>Experienced in turning data into actionable insights, with a touch of Japanese simplicity and efficiency.</p>
+    <p>Experienced in turning data into actionable insights, with simplicity and efficiency.</p>
   </section>
 
   <section class="portfolio">
@@ -88,6 +127,15 @@
     </form>
   </section>
 </div>
+
+<section id="ml-app" class="ml-app">
+    <h2>Machine Learning Application</h2>
+    <p>This is my Machine Learning project hosted on Google Cloud Run. Please interact with it below:</p>
+    <div class="iframe-container">
+      <iframe src="https://aerial-straps-classifier-n3pdpbqp5a-ue.a.run.app/" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+  
 
 <footer>
   <p>© 2023 by Freelance Data Scientist</p>
