--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           
       
         <div class="project">
-            <h3>Machine Learning for Predicting Aircraft Landing Times</h3>
+            <h3>NASA ATD-2 Machine Learning for Predicting Aircraft Landing Times</h3>
             <div class="image-container">
               <img src="assets/nasa_error_dist.png" alt="NASA Error Distribution Visualization" class="project-thumbnail">
               <img src="assets/nasa_waterfall.png" alt="NASA Waterfall Chart" class="project-thumbnail">
