--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
         <div class="project">
             <h3>Interactive Resume with Plotly Dash</h3>
             <div class="image-container">
-              <img src="assets/resume_locations.png" alt="Interactive Resume Locations Screenshot" class="project-thumbnail">
-              <img src="assets/resume_experience.png" alt="Interactive Resume Experience Screenshot" class="project-thumbnail">
+              <img src="assets/resume_map.png" alt="Interactive Resume Locations Screenshot" class="project-thumbnail">
+              <img src="assets/resume_timeline.png" alt="Interactive Resume Experience Screenshot" class="project-thumbnail">
             </div>
             <p>An interactive resume created using Plotly Dash to dynamically present professional experience and skills through engaging visualizations.</p>
             <ul>
