--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-  <div class="container">
+  <div class="container"> <!-- Container Around Everything -->
 
     <!-- Landing Section -->
     <section id="landing" class="tabcontent" style="display: block;">
