--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-  <!-- Sticky Navigation Bar -->
-  <nav class="nav">
-    <div class="navbar-brand">JS Data Science Consulting</div>
+<!-- Sticky Navigation Bar -->
+<nav class="nav">
+    <div class="navbar-brand">
+      <a href="javascript:void(0);" onclick="openTab('landing')" class="home-link">JS Data Science Consulting</a>
+    </div>
     <div class="nav-links">
       <a href="javascript:void(0);" onclick="openTab('landing')">Home</a>
       <a href="javascript:void(0);" onclick="openTab('about')">About</a>
@@ -19,6 +21,7 @@
       <a href="javascript:void(0);" onclick="openTab('contact_page')">Contact</a>
     </div>
   </nav>
+  
   
 
 
