--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                     -->
 
                     <p>After obtaining a Master's in Statistics from University College Dublin, I begain working in data science consulting. 
-                        My six-plus years of consulting introduced me to working in many different industries. My work ranged from constructing intuitive dashboards for utility companies to advancing machine learning models for predicting aircraft landing times for NASA. 
+                        My six-plus years of consulting introduced me to working in many different industries. My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict aircraft landing times for NASA. 
                         I developed models predicting hotel occupancy rates for a hospitality company, and for a consulting company I created an interactive dashboard that modeled their online meeting network traffic.
-                        In addition to consulting, I directly worked for a cybersecurity company aiming to develop machine learning models to identify malware in network traffic.
+                        In addition to consulting, I worked directly for a cybersecurity company aiming to develop machine learning models to identify malware in network traffic.
                     </p> 
                     <p>Through it all, the cornerstone of my practice became clear communication, ensuring stakeholders grasp the necessary details to understand the solution's impact on their business.</p>
 
