--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                   <input type="email" name="_replyto" placeholder="Your Email" required>
                   <textarea name="message" placeholder="Your Message" required></textarea>
                   <input type="submit" value="Book My Free Consultation" class="cta-landing-button">
+                  <p> We respect your privacy and never share your information.</p>
                 </form>
-                <span class="privacy-statement">We respect your privacy and never share your information.</span>
               </div>
               <img src="assets/LinkedInModProfile.jpg" alt="Connect with Me" class="profile-pic">
             </div>
