--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                     -->
 
                     <p>After obtaining a Master's in Statistics from University College Dublin, I begain working in data science consulting. 
-                        My six-plus years of consulting introduced me to working in many different industries. My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict aircraft landing times for NASA. 
-                        I developed models predicting hotel occupancy rates for a hospitality company, and for a consulting company I created an interactive dashboard that modeled their online meeting network traffic.
-                        In addition to consulting, I worked directly for a cybersecurity company aiming to develop machine learning models to identify malware in network traffic.
-                    </p> 
+                        My six-plus years of consulting introduced me to working in many different industries. </p> 
+                    <p>My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict aircraft landing times for NASA. 
+                        I developed models predicting hotel occupancy rates for a hospitality company, and for a client consulting company I created an interactive dashboard that modeled their online meeting network traffic.</p>
+                    <p>In addition to consulting, I worked directly for a cybersecurity company aiming to develop machine learning models to identify malware in network traffic.</p> 
                     <p>Through it all, the cornerstone of my practice became clear communication, ensuring stakeholders grasp the necessary details to understand the solution's impact on their business.</p>
 
                     <p>Seeing a niche for agile, project-based data science expertise, I decided to establish my own practice. I cater to those in need of a skilled data scientist who adapts quickly, communicates effectively, and values simplicity over complexity in solution design.</p>
@@ -190,9 +190,8 @@
                         
                     <div class="testimonial">
                         <blockquote>
-                        It's essential that stakeholders understand the basics of machine learning and data visualization; this prompts beneficial dialogue and deepens their insight into the technologies' business impact.
+                        "It's essential that stakeholders understand the basics of machine learning and data visualization; this prompts beneficial dialogue and deepens their insight into the technologies' business impact."
                         </blockquote>
-                        <p>- John Slough</p>
                     </div>
                     
                     <p>Based in Richmond, VA, I'm readily available for local clients and fully equipped to engage with partners worldwide.</p>
