--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         
                     <div class="testimonial">
                         <blockquote>
-                        "It's essential that stakeholders understand the basics of machine learning and data visualization; this prompts beneficial dialogue and deepens their insight into the technologies' business impact."
+                        "It's essential that stakeholders understand the basics of machine learning and data visualization; this prompts beneficial dialogue and deepens insight into the technologies' business impact."
                         </blockquote>
                     </div>
                     
