--- a/index.html
+++ b/index.html
@@ -221,12 +221,15 @@
             <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
         </ul>
         </div>
-        <h3>The Human Element in AI</h3>
+        <h2>The Human Element in AI</h2>
         <div class="servicesai">
-            <p>While AI and tools like ChatGPT are revolutionizing how we interact with data, the human element remains crucial. 
+            <p>"Let's just chatGPT it!"</p>
+            <p> 
+                AI and tools like ChatGPT are revolutionizing how we interact with data, the human element remains crucial. 
                 Understanding the nuances of your data, the context of your industry, and the strategic implications of analytical findings cannot be fully automated. 
-                One needs to know the right questions to ask. My role is to bridge that gap, ensuring that AI serves as a powerful assistant, not a replacement, in the art of decision-making.</p>
-        </div>
+                One needs to know the right questions to ask and this begins with education. My role is to bridge that gap, ensuring that AI serves as a powerful assistant, not a replacement, in the art of decision-making.</p>
+            </p>
+            </div>
         <p>Ready to enhance your business with data science that makes a difference? Reach out, and let's explore how we can turn your data into a strategic asset.</p>
     </section>
     </section>
