--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@
         </ul>
         </div>
         <h2>The Human Element in AI</h2>
+        <p><strong>"Let's just chatGPT it!"</strong></p>
+
         <div class="servicesai">
-            <p>"Let's just chatGPT it!"</p>
             <p> 
                 AI and tools like ChatGPT are revolutionizing how we interact with data, the human element remains crucial. 
                 Understanding the nuances of your data, the context of your industry, and the strategic implications of analytical findings cannot be fully automated. 
