--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <h3>Aerial Straps Pose Classifier</h3>
             </div>
             <div class="image-container">
-              <img src="assets/bleverflever.gif" alt="Aerial Straps Pose Classifier Thumbnail" class="project-thumbnail">
+              <img src="assets/blever_flever_crop.gif" alt="Aerial Straps Pose Classifier Thumbnail" class="project-thumbnail">
               <img src="assets/straps_flow_chart.png" alt="Flowchart Diagram" class="project-thumbnail flowchart">
             </div>
             <div class="text-container">
