--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
         <div class="text-container">
 
-        <p>My portfolio showcases a selection of projects that demonstrate my expertise in data science, from innovative machine learning applications to interactive data visualization tools. Here's a glimpse into the work I've done:</p>
+        <p>Here's a selection of projects that demonstrate my expertise in data science, from innovative machine learning applications to interactive data visualization tools</p>
         </div>
         <div class="section-divider"></div>
         <div class="project">
@@ -254,7 +254,7 @@
               <img src="assets/straps_flow_chart.png" alt="Flowchart Diagram" class="project-thumbnail flowchart">
             </div>
             <div class="text-container">
-            <p>An application leveraging computer vision and machine learning to classify aerial straps poses. This project illustrates an ML project from conception to deployment. It features OpenCV, MediaPipe, Optuna, MLflow, fastAPI, Docker, and GCR. It's deployed with a user-friendly web app for real-time predictions.</p>
+            <p>An application using computer vision and machine learning to classify aerial straps poses. This project illustrates an ML project from conception to deployment. It features OpenCV, MediaPipe, Optuna, MLflow, fastAPI, Docker, and GCR. It's deployed with a fastAPI web app on Google Cloud Run.</p>
             <ul>
               <li><a href="https://aerial-straps-classifier-n3pdpbqp5a-ue.a.run.app/" target="_blank">Live App deployed on Google Cloud Run</a></li>
               <li><a href="https://github.com/SloughJE/aerial_straps_classifier" target="_blank">GitHub Repository</a></li>
@@ -268,11 +268,11 @@
             <h3>Interactive Resume with Plotly Dash</h3>
             </div>
             <div class="image-container">
-              <img src="assets/resume_map.png" alt="Interactive Resume Locations Screenshot" class="project-thumbnail">
-              <img src="assets/resume_timeline.png" alt="Interactive Resume Experience Screenshot" class="project-thumbnail">
+              <img src="assets/dash_resume_grab.gif" alt="Interactive Resume Locations Screenshot" class="project-thumbnail">
+              
             </div>
             <div class="text-container">
-                <p>An interactive resume created using Plotly Dash to dynamically present professional experience and skills through engaging visualizations.</p>
+                <p>An interactive resume created using Plotly Dash to dynamically present professional experience and skills visually.</p>
                 <ul>
                     <li><a href="https://slough.herokuapp.com/" target="_blank">Live App deployed on Heroku</a></li>
                     <li><a href="https://github.com/SloughJE/Resume" target="_blank">GitHub Repository</a></li>
@@ -286,10 +286,10 @@
                 <h3>Podcast Newsletter Processing and Summary Tool</h3>
             </div>
             <div class="image-container">
-              <img src="assets/podcast_summary.png" alt="Podcast Summary Screenshot" class="project-thumbnail">
+              <img src="assets/podcast_grab.gif" alt="Podcast Summary Screenshot" class="project-thumbnail">
             </div>
             <div class="text-container">
-            <p>A tool that automates the processing of podcast episodes, transcribing them, and generating summaries and highlight images, showcased through a Streamlit app.</p>
+            <p>A tool that automates the creation of a newsletter for a podcast episode. It transcribes, summarizes and generates an image based on the podcast summary. Demo Streamlit app.</p>
         
             <ul>
               <li><a href="https://podcastsummary-jslough.streamlit.app/" target="_blank">Demo App deployed on Streamlit</a></li>
