--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>Bridge the gap between technical expertise and strategic application, empowering your team with the skills to apply advanced analytics for impactful business decisions.</p>
                 </div>
                 <div class="image-container">
-                    <img src="assets/podcast_grab.gif" alt="data viz" class="dataviz-solutions">
+                    <img src="assets/straps_flowchart.gif" alt="data viz" class="dataviz-solutions">
                     
                 </div>
             </div>
