--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                     <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
                   </ul>
             </div>
-            <div class="image-container-nasa">
-                <img src="assets/nasa_waterfall.png" alt="NASA Waterfall Chart">
+            <div class="image-container"">
+                <img src="assets/nasa_chart.gif" alt="NASA Waterfall Chart">
             </div>
         </div>
 
