--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
                   </ul>
             </div>
-            <div class="image-container"">
+            <div class="image-container">
                 <img src="assets/nasa_chart.gif" alt="NASA Waterfall Chart">
             </div>
         </div>
