--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Data Science Consulting</title>
+  <title>JS Data Science Services</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,7 +11,7 @@
 <!-- Sticky Navigation Bar -->
 <nav class="nav">
     <div class="navbar-brand">
-      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Consulting</a>
+      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Services</a>
     </div>
     <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
     <div class="nav-links">
@@ -29,7 +29,7 @@
     <!-- Landing Section -->
     <section id="landing" class="tabcontent" style="display: block;">
         <div class="landing-header">
-        <h1>JS Data Science Consulting</h1>
+        <h1>JS Data Science Services</h1>
         
         <h2>Machine Learning ◆ Visualization ◆ Education</h2>
         <!-- 
@@ -356,7 +356,7 @@
   </div>
 
   <footer>
-    <p>© 2023 by JS DS Consulting</p>
+    <p>© 2023 by JS DS Services</p>
   </footer>
   
     <script>
