--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         <div class="offerings">
 
-            <h2>Core Offerings</h2>
+            <h2>Core Services</h2>
             <ul>
                 <li><strong>Machine Learning Solutions:</strong> Crafting predictive models and custom ML algorithms to turn data into definitive results, supported by clear, well-documented code.</li>
                 <li><strong>Interactive Visualizations:</strong> Designing intuitive visualizations and dashboards with tools like Plotly and Dash to make complex data understandable and actionable.</li>
