--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Supported by clear, well-documented code for ease of use and integration.</p>
                 </div>
                 <div class="image-container">
-                    <img src="assets/animation.gif" alt="classification animation" class="ml-solutions">
+                    <img src="assets/animation_labels.gif" alt="classification animation" class="ml-solutions">
                     
                   </div>
             </div>
