--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             <details class="faq-item">
               <summary>What kind of data science services do you offer?</summary>
-              <p>I offer comprehensive data science services including data analysis, predictive modeling, machine learning, data visualization, and deployment of scalable data products.</p>
+              <p>I offer comprehensive data science services including data analysis, predictive modeling, machine learning, data visualization, and deployment of scalable data products. See the <a href="javascript:void(0);" onclick="openTab('services', this);" class="contact-link"><strong>services</strong></a> page for more.</p>
             </details>
           
             <details class="faq-item">
@@ -189,11 +189,11 @@
                     <p>If your business is looking to harness the power of data science without getting lost in technicalities, I am here to guide you through the journey. Let's unveil the stories hidden within your data together.</p>
                     -->
 
-                    <p>After obtaining a Master's in Statistics from University College Dublin, I begain working in data science consulting. 
-                        My six-plus years of consulting introduced me to working in many different industries. </p> 
+                    <p>After obtaining a Master's in Statistics from University College Dublin, I began working in data science consulting in Virginia. 
+                        My six-plus years of consulting introduced me to working on a large variety of projects, in many different industries. </p> 
                     <p>My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict intra-flight aircraft landing times for NASA. 
                         I developed models predicting hotel occupancy rates for a hospitality company, and for a client consulting company I created an interactive dashboard that modeled their network traffic for online meetings.</p>
-                    <p>In addition to consulting, I worked directly for a cybersecurity company aiming to develop machine learning models to identify malware in network traffic.</p> 
+                    <p>In addition to consulting, I worked directly for a cybersecurity developing machine learning models to identify malware in network traffic.</p> 
                     <p>Through it all, the cornerstone of my practice became clear communication ensuring that stakeholders, especially non-technical ones, grasp the necessary details to understand the solution's impact on their business.</p>
 
                     <p>With this background in agile, project-based approaches, I set up my own data science business to provide focused and efficient services. I cater to those in need of a skilled data scientist who adapts quickly, communicates effectively, and values simplicity over complexity in solution design.</p>
@@ -218,8 +218,9 @@
         <section class="tabcontent2">
 
           <h2 class="page-header">Data Science Services</h2>
-          <p>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively. I prioritize simplicity, clarity, and meaningful results for your business. </p>
           <p>Analyze Understand Simplify Implement</p>
+
+          <p>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively. I prioritize simplicity, clarity, and meaningful results for your business. </p>
 
           <div class="offerings">
 
@@ -227,22 +228,21 @@
               <ul>
                   <li><strong>Machine Learning Solutions:</strong> Crafting predictive models and custom ML algorithms to turn data into definitive results, supported by clear, well-documented code.</li>
                   <li><strong>Interactive Visualizations:</strong> Designing intuitive visualizations and dashboards with tools like Plotly and Dash to make complex data understandable and actionable.</li>
+                  <li><strong>Statistical Analysis and Modeling:</strong> Providing expert statistical analysis. Hypothesis testing, A/B testing, and complex modeling, supporting research and business insights.</li>
+                  <li><strong>Data Wrangling and Processing for Analysis:</strong> Transforming raw data into clean, usable datasets. Automated data pipelines that process data for machine learning or visualizations ensuring your data is analysis-ready.</li>
                   <li><strong>Advanced Data Science Training:</strong> Training for professionals to deepen their understanding of ML and statistics, enabling them to question, collaborate, and validate ML and statistical solutions effectively.</li>
-                  <li><strong>Statistical Analysis and Modeling:</strong> Performing deep statistical analysis to extract insights and inform strategy, complementing ML development.</li>
-                  <li><strong>Data Wrangling and Processing for Analysis:</strong> Transforming raw data into clean, usable datasets. Establishing automated data pipelines that prepare and process data for machine learning and/or visualizations. Proficient with SQL and routine data pipeline creation to ensure your data is analysis-ready.</li>
-                  <li><strong>Data Strategy Consulting:</strong> Offering strategic guidance on data practices, helping businesses to set up and scale their data infrastructure and governance.</li>
                   <li><strong>Operationalization and Deployment:</strong> Implementing solutions in scalable environments using tools like AWS Sagemaker, GCR, and Docker, with tracking via MLflow for operational excellence.</li>
                   <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
               </ul>
           </div>
-          <h2>The Human Element in AI</h2>
-          <p><strong>"Let's just chatGPT it!"</strong></p>
+          <h2>Education, Data Science and AI</h2>
+          <p><strong>"Let's just ChatGPT it!"</strong></p>
 
           <div class="servicesai">
               <p> 
-                  AI and tools like ChatGPT are revolutionizing how we interact with data, the human element remains crucial. 
+                  Although AI tools like ChatGPT are revolutionizing how we interact with data, the human element remains crucial. 
                   Understanding the nuances of your data, the context of your industry, and the strategic implications of analytical findings cannot be fully automated. 
-                  One needs to know the right questions to ask and this begins with education. My role is to bridge that gap, ensuring that AI serves as a powerful assistant, not a replacement, in the art of decision-making.</p>
+                  One needs to know the right questions to ask and this begins with education. AI serves as a powerful assistant, not a replacement, in the art of decision-making with data.</p>
               </p>
             </div>
             <!-- CTA Section -->
