--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   <li><strong>Interactive Visualizations:</strong> Designing intuitive visualizations and dashboards with tools like Plotly and Dash to make complex data understandable and actionable.</li>
                   <li><strong>Statistical Analysis and Modeling:</strong> Providing expert statistical analysis. Hypothesis testing, A/B testing, and complex modeling, supporting research and business insights.</li>
                   <li><strong>Data Wrangling and Processing for Analysis:</strong> Transforming raw data into clean, usable datasets. Automated data pipelines that process data for machine learning or visualizations ensuring your data is analysis-ready.</li>
-                  <li><strong>Advanced Data Science Training:</strong> Training for professionals to deepen their understanding of ML and statistics, enabling them to question, collaborate, and validate ML and statistical solutions effectively.</li>
+                  <li><strong>Advanced Data Science Training:</strong> Training for non or semi-technical professionals to deepen their understanding of ML and statistics, enabling them to question, collaborate, and validate ML and statistical solutions effectively.</li>
                   <li><strong>Operationalization and Deployment:</strong> Implementing solutions in scalable environments using tools like AWS Sagemaker, GCR, and Docker, with tracking via MLflow for operational excellence.</li>
                   <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
               </ul>
