--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
               </ul>
           </div>
-          <h2>Education, Data Science and AI</h2>
+          <h2>AI, Data Science, and Education</h2>
           <p><strong>"Let's just ChatGPT it!"</strong></p>
 
           <div class="servicesai">
