--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
   </div>
 
   <footer>
-    <p>© 2023 by JS DS Services</p>
+    <p>© 2024 by JS Data Science Services LLC</p>
   </footer>
   
     <script>
