--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Sticky Navigation Bar -->
 <nav class="nav">
     <div class="navbar-brand">
-      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Services</a>
+      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Services LLC</a>
     </div>
     <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
     <div class="nav-links">
