adding UnHealth Dash to portfolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>Clear, clean, and intuitive design with communicative power.</p>
                     </div>
                     <div class="image-container">
-                        <img src="assets/dash_resume_grab.gif" alt="data viz" class="dataviz-solutions">
+                        <img src="assets/UnHealth-Dash-short.gif" alt="data viz" class="dataviz-solutions">
                     </div>
                 </div>
             <div class="section-divider"></div>
@@ -275,7 +275,22 @@
                 <img src="assets/blever_flever_crop.gif" alt="Aerial Straps Pose Classifier Thumbnail" class="project-straps">
             </div>
         </div>
-          
+        
+        <div class="section-divider"></div>
+        <div class="benefit">
+            <div class="benefit-text-content">
+                <h2>The UnHealth Dashboard</h2>
+                <p>An interactive county-focused public health dashboard integrating CDC PLACES data, and BEA and BLS economic data. The dashboard presents the UnHealth Score, a summary statistic that aggregates data from multiple health indicators, including chronic disease prevalence, lifestyle choices, and disability rates, facilitating direct comparisons between counties.</p>
+                <ul>
+                    <li><a href="https://unhealth-dashboard-6d75504325c4.herokuapp.com" target="_blank">Live App deployed on Heroku</a></li>
+                    <li><a href="https://github.com/SloughJE/UnHealth_Dashboard" target="_blank">GitHub Repository</a></li>
+                </ul>
+            </div>
+            <div class="image-container">
+                <img src="assets/UnHealth-Dash-short.gif" alt="data viz" class="dataviz-solutions">
+            </div>
+        </div>
+
         <div class="section-divider"></div>
             <div class="benefit">
                 <div class="benefit-text-content">
