--- a/index.html
+++ b/index.html
@@ -292,10 +292,25 @@
         </div>
 
         <div class="section-divider"></div>
+
+        <div class="benefit">
+            <div class="benefit-text-content">
+                <h2>NASA ATD-2 Machine Learning for Predicting Aircraft Landing Times</h2>
+                <p>This project, in collaboration with researchers at NASA, involved developing machine learning models to improve the accuracy of predicting intra-flight aircraft landing times, integrating the model with real-time operational data for air traffic management.</p>
+                <ul>
+                    <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
+                  </ul>
+            </div>
+            <div class="image-container">
+                <img src="assets/nasa_chart.gif" alt="NASA Waterfall Chart">
+            </div>
+        </div>
+
+        <div class="section-divider"></div>
             <div class="benefit">
                 <div class="benefit-text-content">
                     <h2>Interactive Resume with Plotly Dash</h2>
-                    <p>An interactive resume created using Plotly Dash to dynamically present professional experience and skills visually.</p>
+                    <p>My interactive resume created using Plotly Dash to dynamically present my professional experience and skills visually.</p>
                     <ul>
                         <li><a href="https://slough.herokuapp.com/" target="_blank">Live App deployed on Heroku</a></li>
                         <li><a href="https://github.com/SloughJE/Resume" target="_blank">GitHub Repository</a></li>
@@ -319,21 +334,6 @@
             </div>
             <div class="image-container">
                 <img src="assets/podcast_grab.gif" alt="data viz" class="dataviz-solutions">
-            </div>
-        </div>
-          
-        <div class="section-divider"></div>
-
-        <div class="benefit">
-            <div class="benefit-text-content">
-                <h2>NASA ATD-2 Machine Learning for Predicting Aircraft Landing Times</h2>
-                <p>This project involved developing a machine learning model to improve the accuracy of predicting intra-flight aircraft landing times, integrating the model with real-time operational data for air traffic management.</p>
-                <ul>
-                    <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
-                  </ul>
-            </div>
-            <div class="image-container">
-                <img src="assets/nasa_chart.gif" alt="NASA Waterfall Chart">
             </div>
         </div>
 
