adding linkedin link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         My six-plus years of consulting introduced me to working on a large variety of projects, in many different industries. </p> 
                     <p>My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict intra-flight aircraft landing times for NASA. 
                         I developed models predicting hotel occupancy rates for a hospitality company, and for a client consulting company I created an interactive dashboard that modeled their network traffic for online meetings.</p>
-                    <p>In addition to consulting, I worked directly for a cybersecurity developing machine learning models to identify malware in network traffic.</p> 
+                    <p>In addition to consulting, I worked directly for a cybersecurity company, developing machine learning models to identify malware in network traffic.</p> 
                     <p>Through it all, the cornerstone of my practice became clear communication ensuring that stakeholders, especially non-technical ones, grasp the necessary details to understand the solution's impact on their business.</p>
 
                     <p>With this background in agile, project-based approaches, I set up my own data science business to provide focused and efficient services. I cater to those in need of a skilled data scientist who adapts quickly, communicates effectively, and values simplicity over complexity in solution design.</p>
@@ -207,7 +207,7 @@
                     </div>
                     
                     <p>Located in Richmond, VA, I'm <a href="javascript:void(0);" onclick="openTab('contact_page', this);" class="contact-link"><strong>available</strong></a> to work with partners from around the world.</p>
-                    
+                    <a href="https://www.linkedin.com/in/johneslough/" target="_blank">LinkedIn Profile</a>
 
                 </div>
         </div>
