--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
             </div>
             
         </section>
+        <!--
         <div class="section-divider"></div>
         <section class="landing-social-proof">
             <div class="testimonial">
-              <!-- <img src="path-to-testimonial1.jpg" alt="testimonial1"> -->
+              <img src="path-to-testimonial1.jpg" alt="testimonial1">
               <blockquote>"Example Quote."</blockquote>
               <p>- CEO of Test</p>
             </div>
-            <!-- Include more testimonials as needed -->
         </section>
-        
+        -->
         <section id="contact-landing" class="landing-cta">
             <div class="section-divider"></div>
             <h2>Book a Consultation</h2>
