--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             <details class="faq-item">
               <summary>What kind of data science services do you offer?</summary>
-              <p>I offer comprehensive data science services including data analysis, predictive modeling, machine learning, data visualization, and deployment of scalable data products. See the <a href="javascript:void(0);" onclick="openTab('services', this);" class="contact-link"><strong>services</strong></a> page for  information.</p>
+              <p>I offer comprehensive data science services including data analysis, predictive modeling, machine learning, data visualization, and deployment of scalable data products. See the <a href="javascript:void(0);" onclick="openTab('services', this);" class="contact-link"><strong>services</strong></a> page for more information.</p>
               <p>Data Science is a very broad area and encompasses many specialities. If your project falls outside of my areas of expertise, I will be upfont about it and do my best to find others in my network who are experts in that particular area to assist you.</p>
             </details>
           
