--- a/index.html
+++ b/index.html
@@ -221,9 +221,12 @@
 
           <h2 class="page-header">Data Science Services</h2>
           <!-- <p>Analyze Understand Simplify Implement</p> -->
+          <div class="offerings">
 
-          <p>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively. I prioritize simplicity, clarity, and meaningful results for your business. </p>
-
+          <ul>
+            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively. I prioritize simplicity, clarity, and meaningful results for your business.</li>
+          </ul>
+          </div>
           <div class="offerings">
 
             <h2>Core Services</h2>
