--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
           <div class="offerings">
 
           <ul>
-            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively. I prioritize simplicity, clarity, and meaningful results for your business.</li>
+            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively.<br> 
+              I prioritize simplicity, clarity, and meaningful results for your business.</li>
           </ul>
           </div>
           <div class="offerings">
