--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
             </details>
           
             <details class="faq-item">
+              <summary>How can I engage your data science consulting services?</summary>
+              <p>Clients can engage my services through several flexible models tailored to meet different needs and project scopes:</p>
+              <ul>
+                <li><strong>Hourly Consulting:</strong> Ideal for advice, guidance, or specific tasks without a long-term commitment. Clients can hire me on an hourly basis to address immediate data science needs or to provide expert insights.</li>
+                <li><strong>Retainer:</strong> Perfect for ongoing support, a retainer agreement ensures you have guaranteed access to my expertise for a set number of hours each week or month. This model is ideal for businesses that require continuous data science support without the overhead of a full-time hire.</li>
+                <li><strong>Project-Based Pricing:</strong> Suitable for discrete projects with specific deliverables and timelines. This fixed-price model is based on the project's scope and complexity, providing clarity and predictability in costs.</li>
+              </ul>
+            </details>
+            
+            <details class="faq-item">
               <summary>How do you ensure the confidentiality of our data?</summary>
               <p>Your data's security and confidentiality are my top priorities. I employ strict data governance policies including data access controls, data retention and deletion, and use secure methods for data transfer and storage. I have previously worked with highly sensitive data including aerospace data from <a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">NASA</a> and the FAA, and healthcare data. I will gladly work closely with your security or IT teams to ensure secure access to data and compliance with your organization's security protocols. </p>
             </details>
