--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               <summary>How can I engage your data science consulting services?</summary>
               <p>Clients can engage my services through several flexible models tailored to meet different needs and project scopes:</p>
               <ul>
-                <li><strong>Hourly Consulting:</strong> Best for advice, guidance, or specific tasks without a long-term commitment. You can hire me on an hourly basis to address immediate data science needs.</li>
-                <li><strong>Retainer:</strong> Perfect for ongoing support, a retainer agreement ensures you have guaranteed access to my time for a set number of hours each week or month. This model is ideal for businesses that require continuous data science support without the overhead of a full-time hire.</li>
+                <li><strong>Hourly Consulting:</strong> Best for advice, guidance, or specific tasks without a long-term commitment.</li>
+                <li><strong>Retainer:</strong> Perfect for ongoing support, a retainer agreement ensures you have guaranteed access to my time for a set number of hours each week or month. Ideal for businesses that require continuous data science support without the overhead of a full-time hire.</li>
                 <li><strong>Project-Based Pricing:</strong> Suitable for projects with specific deliverables and timelines. This fixed-price model is based on the project's scope and complexity.</li>
               </ul>
             </details>
