--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
     <div class="nav-links">
       <a href="javascript:void(0);" onclick="openTab('landing', this);">Home</a>
-      <a href="javascript:void(0);" onclick="openTab('about', this);">About</a>
       <a href="javascript:void(0);" onclick="openTab('services', this);">Services</a>
       <a href="javascript:void(0);" onclick="openTab('portfolio', this);">Portfolio</a>
+      <a href="javascript:void(0);" onclick="openTab('about', this);">About</a>
       <a href="javascript:void(0);" onclick="openTab('contact_page', this);">Contact</a>
     </div>
 </nav>
@@ -30,8 +30,7 @@
     <section id="landing" class="tabcontent" style="display: block;">
         <div class="landing-header">
         <h1>JS Data Science Services</h1>
-        
-        <h2>Machine Learning ◆ Visualization ◆ Education</h2>
+        <h2>Machine Learning ◆ Data Visualization ◆ Education</h2>
         <!-- 
         <p>Raw Data to Collaborative Solutions for Decisive Impact.</p>
         --> 
